.metadata/.plugins/org.eclipse.cdt.ui/Groceries.build.log
20:17:58 **** Incremental Build of configuration Debug for project Groceries ****
make all 
Building file: ../main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
../main.cpp: In function ‘int main(int, const char**)’:
../main.cpp:51:38: error: expected primary-expression before ‘;’ token
   for(int j = 0; j < /*Upper Bound*/ ;j++){
                                      ^
subdir.mk:21: recipe for target 'main.o' failed
make: *** [main.o] Error 1

20:17:58 Build Finished (took 479ms)

